# mdview-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/mdview_cli/: api.py  cli.py  config.py  state.py
tests/: test_api.py  test_cli.py
tests/e2e/: test_free_tools.py
