[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mdview-cli"
dynamic = ["version"]
description = "Iterate on Markdown and verify every revision with mdview.io"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://mdview.io"
Repository = "https://github.com/gogainda/mdview-cli"
Issues = "https://github.com/gogainda/mdview-cli/issues"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
mdv = "mdview_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
